--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 연락처 -->
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
 
     <application
         android:name=".gif_loading.BaseApplication"
@@ -21,7 +23,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".grid_span_recyclerview.SpannedMainAct"></activity>
+        <activity android:name=".ratingbar.RatingBarMainAct"></activity>
+        <activity android:name=".smsdelete.SmsDeleteMainAct" />
+        <activity android:name=".app_response.ResponseMainAct" />
+        <activity android:name=".grid_span_recyclerview.SpannedMainAct" />
         <activity android:name=".vr.VrMainActivity" />
         <activity android:name=".youtube.YoutubeACt" />
         <activity android:name=".address.AddressMainAct" />
